force-app/main/default/objects/X7S_Adventure__c/X7S_Adventure__c.object-meta.xml
<CustomObject>
    <description>Object to support Learning Adventure records as part of the Learning Adventure accelerator from 7Summits.</description>
    <label>7S Adventure</label>
    <nameField>
        <label>7S Adventure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>7S Adventures</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>