force-app/main/default/objects/X7S_Adventure__c/fields/Adventure_Clone_Settings__c.field-meta.xml
<CustomField>
    <fullName>Adventure_Clone_Settings__c</fullName>
    <defaultValue>&quot;Default&quot;</defaultValue>
    <inlineHelpText>Select the name of the 7S Adventure Clone Setting to indicate whether cloning will be allowed for the new (cloned) adventure.</inlineHelpText>
    <label>Adventure Clone Setting</label>
    <length>80</length>
    <type>Text</type>
</CustomField>