force-app/main/default/objects/X7S_Adventure__c/fields/Allow_Cloning__c.field-meta.xml
<CustomField>
    <fullName>Allow_Cloning__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicate whether this adventure can be cloned.  If set to no, clone button will not be visible.</inlineHelpText>
    <label>Allow Cloning</label>
    <type>Checkbox</type>
</CustomField>