force-app/main/default/objects/X7S_Adventure__c/fields/Number_of_Completed_Steps__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Completed_Steps__c</fullName>
    <label>Number of Completed Steps</label>
    <summaryFilterItems>
        <field>X7S_Adventure_Step__c.Completed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>X7S_Adventure_Step__c.Adventure__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>