force-app/main/default/objects/X7S_Adventure__c/fields/Source_Template__c.field-meta.xml
<CustomField>
    <fullName>Source_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source</label>
    <referenceTo>X7S_Adventure__c</referenceTo>
    <relationshipLabel>7S Cloned Adventures</relationshipLabel>
    <relationshipName>X7S_Cloned_Adventures</relationshipName>
    <type>Lookup</type>
</CustomField>