force-app/main/default/objects/X7S_Adventure__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title to display in Adventure Header</description>
    <inlineHelpText>This is the title that will be displayed in the Adventure header</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>