force-app/main/default/objects/X7S_Adventure__c/listViews/Accelerator_Training_Paths.listView-meta.xml
<ListView>
    <fullName>Accelerator_Training_Paths</fullName>
    <columns>NAME</columns>
    <columns>Number_of_Modules__c</columns>
    <columns>Number_of_Tasks__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>Accelerator Training Path</value>
    </filters>
    <filters>
        <field>Show_Checkboxes__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Accelerator Training Paths</label>
</ListView>