force-app/main/default/objects/X7S_Adventure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source_Template__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Number_of_Completed_Modules__c</columns>
    <columns>Number_of_Completed_Steps__c</columns>
    <columns>Number_of_Completed_Tasks__c</columns>
    <columns>Number_of_Modules__c</columns>
    <columns>Number_of_Steps__c</columns>
    <columns>Number_of_Tasks__c</columns>
    <columns>Module_Progress__c</columns>
    <columns>Step_Progress__c</columns>
    <columns>Task_Progress__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>