force-app/main/default/objects/X7S_Adventure__c/listViews/My_Adventures.listView-meta.xml
<ListView>
    <fullName>My_Adventures</fullName>
    <columns>NAME</columns>
    <columns>Task_Progress__c</columns>
    <columns>Step_Progress__c</columns>
    <columns>Module_Progress__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Adventures</label>
</ListView>