force-app/main/default/objects/X7S_Adventure__c/listViews/My_Musher_Adventure.listView-meta.xml
<ListView>
    <fullName>My_Musher_Adventure</fullName>
    <columns>NAME</columns>
    <columns>Number_of_Tasks__c</columns>
    <columns>Number_of_Completed_Tasks__c</columns>
    <columns>Task_Progress__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Musher</value>
    </filters>
    <label>My Musher Adventure</label>
</ListView>