force-app/main/default/objects/X7S_Adventure__c/listViews/Recently_Created_Mushers.listView-meta.xml
<ListView>
    <fullName>Recently_Created_Mushers</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Title__c</field>
        <operation>contains</operation>
        <value>Musher</value>
    </filters>
    <label>Recently Created Mushers</label>
</ListView>